--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             </nav>
         </div>
     </header>
+    <!-- Principal -->
+    <main>
+        <div class="container">
+            <h1>MONTE SEU PC GAMER PERFEITO</h1>
+            <h2>Professor Ramos</h2>
+            <!--a href="https://www.youtube.com/professorramos" target="_blank" rel="noopener noreferrer" class="btn">Saiba +</a-->
+        </div>
+    </main>
 </body>
 
 </html>
