--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professor Ramos - PC Gamer</title>
+    <title>Professor Ramos - Hardware e PC Gamer</title>
     <meta name="description"
-        content="Monte seu PC Gamer dos sonhos com o Professor Ramos! Montagem, upgrade, manutenção e reviews de hardware.">
+        content="Monte seu PC Gamer dos sonhos com o Professor Ramos! Upgrades, manutenção e reviews de hardware com  muita paixão pelo mundo da tecnologia.">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Koulen&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <!-- Folha de estilo -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,10 +22,11 @@
     <!-- Cabeçalho -->
     <header>
         <div class="container">
-            <div id="logo">
+            <!-- Logo -->
+            <div class="logo">
                 <img src="./img/logo.png" alt="Professor Ramos">
             </div>
-            <!-- menu -->
+            <!-- Menu -->
             <nav>
                 <input type="checkbox" id="check">
                 <label for="check">&#x268c;</label>
@@ -41,10 +43,59 @@
     <main>
         <div class="container">
             <h1>MONTE SEU PC GAMER PERFEITO</h1>
-            <h2>Professor Ramos</h2>
-            <!--a href="https://www.youtube.com/professorramos" target="_blank" rel="noopener noreferrer" class="btn">Saiba +</a-->
+            <H2>Professor Ramos</H2>
+            <a href="https://www.youtube.com/@professorramos" target="_blank" rel="noopener noreferrer"
+                class="btn">Saiba +</a>
         </div>
     </main>
+    <!-- Destaque -->
+    <section id="destaque">
+        <div class="container">
+            <div id="hero">
+                <img src="./img/professorramos.png" alt="Professor Ramos">
+            </div>
+            <div class="hero-text">
+                <h2>Monte seu PC Gamer comigo!</h2>
+                <p>Realizo o serviço de montagem, upgrade e manutenção de PCs Gamer em São Paulo e região. Ofereço
+                    consultoria personalizada para escolher as melhores peças e alcançar o máximo desempenho dentro do
+                    seu orçamento.</p>
+                <div class="topic">
+                    <img src="./img/chip.png" alt="chip icon">
+                    <p>Montagem de PC Gamer</p>
+                </div>
+                <div class="topic">
+                    <img src="./img/gui.png" alt="gui icon">
+                    <p>Upgrade</p>
+                </div>
+                <div class="topic">
+                    <img src="./img/cooler.png" alt="cooler icon">
+                    <p>Manutenção</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Sobre -->
+    <section id="sobre">
+        <div class="container">
+            <div id="about">
+                <h2>⚡Professor Ramos</h2>
+                <p>Oi! Eu sou o Professor Ramos, apaixonado por hardware e especialista em montagem de PCs Gamer
+                    personalizados.</p>
+                <br>
+                <p>Com mais de 20 anos de experiência formando técnicos, compartilho no YouTube montagens reais, dicas, testes e
+                    reviews, sempre com bom humor e aquele jeito fácil e divertido de ensinar hardware.</p>
+                <br>
+                <p>Se você quer aprender sobre hardware ou montar seu PC Gamer comigo, está no lugar certo! Aperta o
+                    play e vem comigo!</p>
+            </div>
+            <div id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/_FW2eTsjaWE?si=AYvhB9moRkb3wouJ"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
