--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 </div>
                 <div class="topic">
                     <img src="./img/gui.png" alt="gui icon">
-                    <p>Upgrade</p>
+                    <p>Upgrade e Desempenho</p>
                 </div>
                 <div class="topic">
                     <img src="./img/cooler.png" alt="cooler icon">
-                    <p>Manutenção</p>
+                    <p>Manutenção Preventiva e Corretiva</p>
                 </div>
             </div>
         </div>
@@ -82,7 +82,8 @@
                 <p>Oi! Eu sou o Professor Ramos, apaixonado por hardware e especialista em montagem de PCs Gamer
                     personalizados.</p>
                 <br>
-                <p>Com mais de 20 anos de experiência formando técnicos, compartilho no YouTube montagens reais, dicas, testes e
+                <p>Com mais de 20 anos de experiência formando técnicos, compartilho no YouTube montagens reais, dicas,
+                    testes e
                     reviews, sempre com bom humor e aquele jeito fácil e divertido de ensinar hardware.</p>
                 <br>
                 <p>Se você quer aprender sobre hardware ou montar seu PC Gamer comigo, está no lugar certo! Aperta o
@@ -93,6 +94,31 @@
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <!-- Faixa -->
+    <section id="faixa">
+        <div class="container">
+            <div id="range-text">
+                <div class="topic">
+                    <img src="./img/telegram.png" alt="telegram icon">
+                    <h2>Entre para o grupo do Professor Ramos no Telegram!</h2>
+                </div>
+                <p>Fique por dentro das melhores promoções, cupons e ofertas exclusivas de hardware e periféricos.
+                    Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
+                <div id="btn-telegram">
+                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                        class="btn">&#x27A4; Bora pro grupo!</a>
+                </div>
+                <div class="topic">
+                    <img src="./img/whatsapp.png" alt="whatsapp icon">
+                    <h2>Prefere o WhatsApp?</h2>
+                </div>
+                <p>Entre em contato diretamente comigo para receber o link dos grupos disponíveis.</p>
+            </div>
+            <div id="qrcode">
+                <img src="./img/qrcodetelegram.png" alt="qrcode telegram">
             </div>
         </div>
     </section>
