--- a/index.html
+++ b/index.html
@@ -101,23 +101,26 @@
     <section id="faixa">
         <div class="container">
             <div id="range-text">
-                <div class="topic">
-                    <img src="./img/telegram.png" alt="telegram icon">
-                    <h2>Entre para o grupo do Professor Ramos no Telegram!</h2>
-                </div>
-                <p>Fique por dentro das melhores promoções, cupons e ofertas exclusivas de hardware e periféricos.
-                    Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
-                <div id="btn-telegram">
-                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
-                        class="btn">&#x27A4; Bora pro grupo!</a>
+                <div class="qrcode">
+                    <img src="./img/qrcodewhatsapp.png" alt="qrcode whatsapp">
                 </div>
                 <div class="topic">
                     <img src="./img/whatsapp.png" alt="whatsapp icon">
-                    <h2>Prefere o WhatsApp?</h2>
+                    <img src="./img/telegram.png" alt="telegram icon">
+                    <h2>Entre para os grupos do Professor Ramos!</h2>
                 </div>
-                <p>Entre em contato diretamente comigo para receber o link dos grupos disponíveis.</p>
+                <p>Fique por dentro das melhores promoções, cupons e ofertas exclusivas de hardware e periféricos.
+                    Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
+                <div id="btn-whatsapp">
+                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                        class="btn"><span style="filter: brightness(0) invert(1);">📞</span> Bora pro WhatsApp!</a>
+                </div>
+                <div id="btn-telegram">
+                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                        class="btn">&#x27A4; Bora pro Telegram!</a>
+                </div>
             </div>
-            <div id="qrcode">
+            <div class="qrcode">
                 <img src="./img/qrcodetelegram.png" alt="qrcode telegram">
             </div>
         </div>
