--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <!-- Faixa -->
     <section id="faixa">
         <div class="container">
-            <div id="range-text">
-                <div class="qrcode">
-                    <img src="./img/qrcodewhatsapp.png" alt="qrcode whatsapp">
-                </div>
+            <div class="qrcode">
+                <img src="./img/qrcodewhatsapp.png" alt="qrcode whatsapp">
+            </div>
+            <div class="range-text">
                 <div class="topic">
                     <img src="./img/whatsapp.png" alt="whatsapp icon">
                     <img src="./img/telegram.png" alt="telegram icon">
@@ -111,13 +111,15 @@
                 </div>
                 <p>Fique por dentro das melhores promoções, cupons e ofertas exclusivas de hardware e periféricos.
                     Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
-                <div id="btn-whatsapp">
-                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
-                        class="btn"><span style="filter: brightness(0) invert(1);">📞</span> Bora pro WhatsApp!</a>
-                </div>
-                <div id="btn-telegram">
-                    <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
-                        class="btn">&#x27A4; Bora pro Telegram!</a>
+                <div id="btn-align">
+                    <div id="btn-whatsapp">
+                        <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                            class="btn"><span style="filter: brightness(0) invert(1);">📞</span> Bora pro WhatsApp!</a>
+                    </div>
+                    <div id="btn-telegram">
+                        <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                            class="btn">&#x27A4; Bora pro Telegram!</a>
+                    </div>
                 </div>
             </div>
             <div class="qrcode">
