--- a/index.html
+++ b/index.html
@@ -130,6 +130,49 @@
             </div>
         </div>
     </section>
+    <!-- Cartões -->
+    <section id="pcgamer">
+        <div class="container">
+            <div class="card">
+                <img src="img/gvgmall.png" alt="gvgmall">
+                <h2>Cupom PR25 Professor Ramos</h2>
+                <p>Aproveite 25% de desconto em licenças Windows e Office! Use o cupom "PR25" do Professor Ramos ao
+                    clicar no botão.</p>
+                <a href="https://br.gvgmall.com/key/202110081330187068.html?urd=PR25-WIN11" target="_blank"
+                    rel="noopener noreferrer" class="btn">Ativar cupom</a>
+            </div>
+            <div class="card">
+                <img src="./img/youtubechanel.png" alt="youtube chanel">
+                <h2>Veja Montagens Reais!</h2>
+                <p>Confira montagens reais de PCs Gamer, dicas e reviews de hardware e periféricos com o Professor
+                    Ramos!</p>
+                <a href="https://www.youtube.com/@professorramos?sub_confirmation=1" target="_blank"
+                    rel="noopener noreferrer" class="btn">Assistir no YouTube</a>
+            </div>
+            <div class="card">
+                <img src="./img/kaspersky.png" alt="kaspersky">
+                <h2>Proteja-se com +30% OFF!</h2>
+                <p>Garanta já seu antivírus Kaspersky com 30% de desconto usando o cupom exclusivo do Professor Ramos!
+                </p>
+                <a href="https://www.seguranca.gg/proframos/" target="_blank" rel="noopener noreferrer"
+                    class="btn">Ativar +30% OFF</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Rodapé -->
     <!--
     <address>
