--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <h1>MONTE SEU PC GAMER PERFEITO</h1>
             <H2>Professor Ramos</H2>
-            <a href="https://www.youtube.com/@professorramos" target="_blank" rel="noopener noreferrer" class="btn"><svg
+            <a href="https://www.youtube.com/@professorramos?sub_confirmation=1" target="_blank" rel="noopener noreferrer" class="btn"><svg
                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="white">
                     <path
                         d="M19.615 3.184c-1.907-.163-6.362-.184-7.615-.184s-5.708.021-7.615.184C2.615 3.355 2 5.093 2 8v8c0 2.907.615 4.645 2.385 4.816 1.907.163 6.362.184 7.615.184s5.708-.021 7.615-.184C21.385 20.645 22 18.907 22 16V8c0-2.907-.615-4.645-2.385-4.816zM10 15V9l5 3-5 3z" />
@@ -136,18 +136,17 @@
             <div class="card">
                 <img src="img/gvgmall.png" alt="gvgmall">
                 <h2>Cupom PR25 Professor Ramos</h2>
-                <p>Aproveite 25% de desconto em licenças Windows e Office! Use o cupom "PR25" do Professor Ramos ao
+                <p>Aproveite 25% de desconto em licenças Windows e Office! Use o cupom <strong>PR25</strong> do Professor Ramos ao
                     clicar no botão.</p>
                 <a href="https://br.gvgmall.com/key/202110081330187068.html?urd=PR25-WIN11" target="_blank"
                     rel="noopener noreferrer" class="btn">Ativar cupom</a>
             </div>
             <div class="card">
-                <img src="./img/youtubechanel.png" alt="youtube chanel">
-                <h2>Veja Montagens Reais!</h2>
-                <p>Confira montagens reais de PCs Gamer, dicas e reviews de hardware e periféricos com o Professor
-                    Ramos!</p>
-                <a href="https://www.youtube.com/@professorramos?sub_confirmation=1" target="_blank"
-                    rel="noopener noreferrer" class="btn">Assistir no YouTube</a>
+                <img src="./img/snowdog.png" alt="snow dog pasta térmica">
+                <h2>Turbine o Resfriamento!</h2>
+                <p>Baixe as temperaturas do processador com a pasta térmica Snow Dog, desempenho e confiança de alto nível!</p>
+                <a href="https://mercadolivre.com/sec/1Bikogh" target="_blank"
+                    rel="noopener noreferrer" class="btn">Ver produto</a>
             </div>
             <div class="card">
                 <img src="./img/kaspersky.png" alt="kaspersky">
