--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="card">
                 <img src="./img/snowdog.png" alt="snow dog pasta térmica">
                 <h2>Turbine o Resfriamento!</h2>
-                <p>Baixe as temperaturas do processador com a pasta térmica Snow Dog, desempenho e confiança de alto nível!</p>
+                <p>Baixe a temperatura do processador com a pasta térmica Snow Dog, desempenho e confiança de alto nível!</p>
                 <a href="https://mercadolivre.com/sec/1Bikogh" target="_blank"
                     rel="noopener noreferrer" class="btn">Ver produto</a>
             </div>
