--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
                 <div id="btn-align">
                     <div id="btn-whatsapp">
-                        <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
+                        <a href="https://chat.whatsapp.com/DCOciIHm79B00wHSi6GD4u" target="_blank" rel="noopener noreferrer"
                             class="btn"><span style="filter: brightness(0) invert(1);">📞</span>Bora pro WhatsApp!</a>
                     </div>
                     <div id="btn-telegram">
