--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Cabeçalho -->
-    <header>
+    <header id="inicio">
         <div class="container">
             <!-- Logo -->
             <div class="logo">
@@ -31,10 +31,10 @@
                 <input type="checkbox" id="check">
                 <label for="check">&#x268c;</label>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">PC Gamer</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#pcgamer">Parceria</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,8 +44,9 @@
         <div class="container">
             <h1>MONTE SEU PC GAMER PERFEITO</h1>
             <H2>Professor Ramos</H2>
-            <a href="https://www.youtube.com/@professorramos?sub_confirmation=1" target="_blank" rel="noopener noreferrer" class="btn"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="white">
+            <a href="https://www.youtube.com/@professorramos?sub_confirmation=1" target="_blank"
+                rel="noopener noreferrer" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
+                    viewBox="0 0 24 24" fill="white">
                     <path
                         d="M19.615 3.184c-1.907-.163-6.362-.184-7.615-.184s-5.708.021-7.615.184C2.615 3.355 2 5.093 2 8v8c0 2.907.615 4.645 2.385 4.816 1.907.163 6.362.184 7.615.184s5.708-.021 7.615-.184C21.385 20.645 22 18.907 22 16V8c0-2.907-.615-4.645-2.385-4.816zM10 15V9l5 3-5 3z" />
                 </svg>Canal no YouTube</a>
@@ -116,8 +117,9 @@
                     Acesse pelo botão <span id="tele">ou escaneie o QR Code</span> e receba tudo em primeira mão!</p>
                 <div id="btn-align">
                     <div id="btn-whatsapp">
-                        <a href="https://chat.whatsapp.com/DCOciIHm79B00wHSi6GD4u" target="_blank" rel="noopener noreferrer"
-                            class="btn"><span style="filter: brightness(0) invert(1);">📞</span>Bora pro WhatsApp!</a>
+                        <a href="https://chat.whatsapp.com/DCOciIHm79B00wHSi6GD4u" target="_blank"
+                            rel="noopener noreferrer" class="btn"><span
+                                style="filter: brightness(0) invert(1);">📞</span>Bora pro WhatsApp!</a>
                     </div>
                     <div id="btn-telegram">
                         <a href="https://t.me/professorramos_promo" target="_blank" rel="noopener noreferrer"
@@ -136,17 +138,11 @@
             <div class="card">
                 <img src="img/gvgmall.png" alt="gvgmall">
                 <h2>Cupom PR25 Professor Ramos</h2>
-                <p>Aproveite 25% de desconto em licenças Windows e Office! Use o cupom <strong>PR25</strong> do Professor Ramos ao
+                <p>Aproveite 25% de desconto em licenças Windows e Office! Use o cupom <strong>PR25</strong> do
+                    Professor Ramos ao
                     clicar no botão.</p>
                 <a href="https://br.gvgmall.com/key/202110081330187068.html?urd=PR25-WIN11" target="_blank"
                     rel="noopener noreferrer" class="btn">Ativar cupom</a>
-            </div>
-            <div class="card">
-                <img src="./img/snowdog.png" alt="snow dog pasta térmica">
-                <h2>Turbine o Resfriamento!</h2>
-                <p>Baixe a temperatura do processador com a pasta térmica Snow Dog, desempenho e confiança de alto nível!</p>
-                <a href="https://mercadolivre.com/sec/1Bikogh" target="_blank"
-                    rel="noopener noreferrer" class="btn">Ver produto</a>
             </div>
             <div class="card">
                 <img src="./img/kaspersky.png" alt="kaspersky">
@@ -156,59 +152,28 @@
                 <a href="https://www.seguranca.gg/proframos/" target="_blank" rel="noopener noreferrer"
                     class="btn">Ativar +30% OFF</a>
             </div>
+            <div class="card">
+                <img src="./img/snowdog.png" alt="snow dog pasta térmica">
+                <h2>Turbine o Resfriamento!</h2>
+                <p>Baixe a temperatura do processador com a pasta térmica Snow Dog, desempenho e confiança de alto
+                    nível!</p>
+                <a href="https://mercadolivre.com/sec/1Bikogh" target="_blank" rel="noopener noreferrer" class="btn">Ver
+                    produto</a>
+            </div>
         </div>
     </section>
+    <!-- Contato -->
+    <address id="contato">
+        <div class="container">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Rodapé -->
-    <!--
-    <address>
-        <div class="Container Flex6">
-            <div id="contato">
-                <a href="https://api.whatsapp.com/send?phone=5511012345678" target="_blank">
-                    <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no WhatsApp">
-                    <p>(11) 01234-5678</p>
-                </a>
-                <img src="img/fone.png" alt="fone">
-                <p>(11) 01234-5678</p>
-            </div>
-            <div>
-                <a href="https://goo.gl/maps/mLpzArWKPpWZDgaD7"><img src="img/mapa.png" alt="Mapa" id="iconeMapa"></a>
-                <img src="img/local.png" alt="local" id="iconeLocal">
-                <p>Rua Nome da rua, 1234</p>
-                <p>Nome do bairro</p>
-                <p>São Paulo - SP</p>
-                <a href="mailto:seuemail@email.com?subject=HTML5CSS3">
-                    <img src="img/email.png" alt="email" title="Enviar E-mail">
-                    <p>seuemail@email.com</p>
-                </a>
-                <p id="dados">&#128064; Endereço e dados de contato ficticios</p>
-            </div>
-            <div id="googleMaps">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14631.893034344139!2d-46.56380894999999!3d-23.5334642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1656422745432!5m2!1spt-BR!2sbr"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
         </div>
     </address>
-
+    <!-- Rodapé -->
     <footer>
         <div class="container">
             <div>
-                <p>&#169;<span id="copyrightYear"></span> - Professor Ramos</p>
+                <p>&#169;<span id="copyrightYear"></span> - Professor Ramos | <a href="https://joseassis.com.br/"
+                        target="_blank" rel="noopener noreferrer"><strong></strong>DEV José de Assis</a></p>
             </div>
             <div id="social">
                 <a href="https://www.instagram.com/professorramoscom/" target="_blank"><img src="img/instagram.png"
@@ -221,14 +186,16 @@
             </div>
         </div>
     </footer>
-    <a href="#inicio" id="topo"><img src="img/top.png" alt="topo do site"></a>
-
-    <script>         
+    <!-- topo do site -->
+    <div id="topo">
+        <a href="#inicio"><img src="./img/top.png" alt="icon top"></a>
+    </div>
+    <!-- Ano automático -->
+    <script>
         let ano = document.getElementById("copyrightYear")
         let anoAtual = new Date().getFullYear()
         ano.textContent = anoAtual
     </script>
-    -->
 </body>
 
 </html>
