--- a/index.html
+++ b/index.html
@@ -165,7 +165,24 @@
     <!-- Contato -->
     <address id="contato">
         <div class="container">
-
+            <div id="endereco">
+                <div class="topic">
+                    <img src="./img/whatsroxo.png" alt="icon whatsapp">
+                    <p id="zap">(11) 96779-1979</p>
+                </div>
+                <p><strong>Email:</strong> leandro@professorramos.com</p>
+                <p><strong>Redes sociais:</strong> @professorramos</p>
+                <div id="local">
+                    <p>📍O Professor Ramos atende na Vila Ré, zona leste de São Paulo - SP. Atendimento confiável para
+                    montagem, upgrade e conserto de PCs!</p>
+                </div>                
+            </div>
+            <div id="mapa">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14632.394047513422!2d-46.51587898279694!3d-23.52895898740805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce60bb3d1fc621%3A0x784fff3aa0598f77!2zVmlsYSBSw6ksIFPDo28gUGF1bG8gLSBTUA!5e0!3m2!1spt-BR!2sbr!4v1762987555474!5m2!1spt-BR!2sbr"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </address>
     <!-- Rodapé -->
