--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
     </section>
     <!-- Cartões -->
-    <section id="pcgamer">
+    <section id="parceria">
         <div class="container">
             <div class="card">
                 <img src="img/gvgmall.png" alt="gvgmall">
@@ -174,8 +174,8 @@
                 <p><strong>Redes sociais:</strong> @professorramos</p>
                 <div id="local">
                     <p>📍O Professor Ramos atende na Vila Ré, zona leste de São Paulo - SP. Atendimento confiável para
-                    montagem, upgrade e conserto de PCs!</p>
-                </div>                
+                        montagem, upgrade e conserto de PCs Gamer!</p>
+                </div>
             </div>
             <div id="mapa">
                 <iframe
